<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/start_scan_menuitem"
          android:title="@string/menu_item_start_scan"
          android:icon="@drawable/ic_action_start"
          android:showAsAction="ifRoom"
          android:visible="false"/>
    <item android:id="@+id/pause_scan_menuitem"
          android:title="@string/menu_item_pause_scan"
          android:icon="@drawable/ic_action_pause"
          android:showAsAction="ifRoom"
          android:visible="false"/>
    <item android:id="@+id/map_view_menuitem"
          android:icon="@drawable/ic_action_map_view"
          android:title="@string/dialog_title_map_view"
          android:showAsAction="never"/>
    <item android:id="@+id/settings_menuitem"
          android:title="@string/menu_item_settings"
          android:icon="@drawable/ic_action_settings"
          android:showAsAction="never"/>
    <item android:id="@+id/help_menuitem"
          android:title="@string/menu_item_help"
          android:icon="@drawable/ic_action_help"
          android:showAsAction="never"/>
    <item android:id="@+id/about_menuitem"
          android:title="@string/activity_title_about"
          android:icon="@drawable/ic_action_about"
          android:showAsAction="never"/>
</menu>
